cluster/apps/security/loginapp/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-loginapp
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`loginapp.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: rfc1918
      services:
        - name: loginapp
          namespace: security
          port: 5555

  # Use the secret generated by cert-manager
  tls:
    secretName: '${SECRET_DOMAIN/./-}-tls'
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
